Added Diver Info Form

--- a/Client/Pages/DiveLog/AddEditDive.razor
+++ b/Client/Pages/DiveLog/AddEditDive.razor
@@ -38,7 +38,7 @@
                 loc = dfd.Viewlocations;
                 ddd = dfd.DDD;
 
-                butontext = "Update Dive";
+                butontext = "Update";
             }
             else
             {
@@ -46,7 +46,7 @@
                 div = new Dives();
                 loc = dfd.Viewlocations;
                 ddd = dfd.DDD;
-                butontext = "Add New Dive";
+                butontext = "Add";
             }
         }
         catch (Exception ex)
