--- a/Client/Pages/DiverInfo/ViewDiver.razor
+++ b/Client/Pages/DiverInfo/ViewDiver.razor
@@ -40,53 +40,53 @@
         </div>
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-                <EditForm Model="@dvr" OnValidSubmit="@SaveDive">
+                <EditForm Model="@dvr" OnValidSubmit="@SaveDiver">
                     <DataAnnotationsValidator />
-                    
-                        <div class="row">
-                            <div class="col-7">
-                                <span class="field-label" title="First and Last Name">First and Last Name</span>
-                                <br />
-                                <input type="text" class="form-control form-control-lg" @bind="@dvr.DiverName" />
-                                <ValidationMessage For="@(() => dvr.DiverName)" />
-                            </div>
-                            <div class="col-5">
-                                <span class="field-label" title="Birthday">Birthday</span>
-                                <br />
-                                <input type="date" class="form-control form-control-lg" @bind="@dvr.Birthday" />
-                                <ValidationMessage For="@(() => dvr.Birthday)" />
-                            </div>
+
+                    <div class="row">
+                        <div class="col-7">
+                            <span class="field-label" title="First and Last Name">First and Last Name</span>
+                            <br />
+                            <input type="text" class="form-control form-control-lg" @bind="@dvr.DiverName" />
+                            <ValidationMessage For="@(() => dvr.DiverName)" />
                         </div>
-                        <div class="row">
-                            <div class="col-6">
-                                <span class="field-label" title="Diver No.">Diver No.</span>
-                                <br />
-                                <input type="text" class="form-control form-control-lg" @bind="@dvr.DiverNo" />
-                                <ValidationMessage For="@(() => dvr.DiverNo)" />
-                            </div>
-                            <div class="col-6">
-                                <span class="field-label" title="Measurement">Measurement</span>
-                                <br />
-                                <input type="text" class="form-control form-control-lg" @bind="@dvr.MeasurementID" />
-                                <ValidationMessage For="@(() => dvr.MeasurementID)" />
-                            </div>
+                        <div class="col-5">
+                            <span class="field-label" title="Birthday">Birthday</span>
+                            <br />
+                            <input type="date" class="form-control form-control-lg" @bind="@dvr.Birthday" />
+                            <ValidationMessage For="@(() => dvr.Birthday)" />
                         </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <span class="field-label" title="Email">Email</span>
-                                <br />
-                                <input type="text" class="form-control form-control-lg" @bind="@dvr.Email" />
-                                <ValidationMessage For="@(() => dvr.Email)" />
-                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <span class="field-label" title="Diver No.">Diver No.</span>
+                            <br />
+                            <input type="text" class="form-control form-control-lg" @bind="@dvr.DiverNo" />
+                            <ValidationMessage For="@(() => dvr.DiverNo)" />
                         </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <button type="submit" class="btn btn-success">
-                                    @butontext
-                                </button>
-                            </div>
+                        <div class="col-6">
+                            <span class="field-label" title="Measurement">Measurement</span>
+                            <br />
+                            <input type="text" class="form-control form-control-lg" @bind="@dvr.MeasurementID" />
+                            <ValidationMessage For="@(() => dvr.MeasurementID)" />
                         </div>
-                    
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <span class="field-label" title="Email">Email</span>
+                            <br />
+                            <input type="text" class="form-control form-control-lg" @bind="@dvr.Email" />
+                            <ValidationMessage For="@(() => dvr.Email)" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <button type="submit" class="btn btn-success">
+                                @butontext
+                            </button>
+                        </div>
+                    </div>
+
                 </EditForm>
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-6">
@@ -112,7 +112,11 @@
                                         {
                                             <tr>
                                                 <td class="lh-td">
-                                                    <a class="btn btn-transparent text-primary" href="divelog/addeditdiver/true/@cert.Id" data-toggle="tooltip" data-placement="auto" title="Edit Dive"><i class="oi oi-pencil"></i></a>
+                                                    @*<button @onclick="(() => GetCert(cert.Id))" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                                                        <i class="oi oi-pencil"></i>
+                                                    </button>*@
+                                                    <a class="btn btn-transparent text-primary" data-toggle="modal" data-target="#exampleModal"><i class="oi oi-pencil"></i></a>
+                                                    @*<a class="btn btn-transparent text-primary" href="divelog/addeditdiver/true/@cert.Id" data-toggle="tooltip" data-placement="auto" title="Edit Dive"><i class="oi oi-pencil"></i></a>*@
                                                 </td>
                                                 <td class="lh-td">@cert.CertDate?.ToString("MM/dd/yyyy")</td>
                                                 <td class="col-1 lh-td">@cert.Certification</td>
@@ -129,7 +133,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     }
@@ -140,13 +143,36 @@ else
     <p>You're not signed in.</p>
 }
 
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Hello
+                @*<EditForm Model="certinfo" OnValidSubmit="@SaveDiver">
+                    <h3>@certinfo.Id</h3>
+                </EditForm>*@
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 @code {
     [Parameter] public DiverInformation dvr { get; set; }
     private bool act { get; set; }
     private string butontext = string.Empty;
     DiverView diverview { get; set; }
-
+    Certifications certinfo { get; set; } = new Certifications();
 
     protected override async Task OnInitializedAsync()
     {
@@ -176,7 +202,13 @@ else
         }
     }
 
-    async Task SaveDive()
+    async Task GetCert(long certId)
+    {
+        certinfo = await http.GetFromJsonAsync<Certifications>($"api/diver/byCertId?certid={certId}");
+    }
+
+
+    async Task SaveDiver()
     {
         if (act)
         {
