--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -54,6 +54,11 @@
                             <span class="oi oi-list" aria-hidden="true"></span> Dive Charts
                         </NavLink>
                     </li>
+                    @*<li class="nav-item px-2">
+                        <NavLink class="nav-link" href="modal-test">
+                            <span class="oi oi-list" aria-hidden="true"></span> Modal Test
+                        </NavLink>
+                    </li>*@
                     <li class="nav-item px-2">
                         <NavLink class="nav-link" @onclick="BeginSignOut">
                             <span class="oi oi-account-logout" aria-hidden="true"></span> Log out
