--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -262,14 +262,15 @@ app {
 /*#region Lock table header Section*/
 
 .lh-table-container {
-    background-color: transparent;
+    background-color: rgba(255,255,255, 1.0);
     border: none;
     height: 68vh;
-    margin: 10px auto;
+    /*margin: 10px auto;*/
     padding-top: 0;
     position: relative;
-    width: 98%;
+    width: 80vw;
     min-width: 500px;
+    min-height: 320px;
 }
 
 
@@ -277,28 +278,29 @@ app {
     height: 100%;
     overflow-x: auto;
     overflow-y: auto;
-    min-width: 500px;
 }
 
 .lh-header-container {
-    background-color: rgb(51, 122, 183);
-    height: 1.5em;
+    background-color: black;
+    height: 40px;
     left: 0;
     position: absolute;
     right: 0;
     top: 0;
-    width: 96.2%;
+    width: 78vw;
+    min-width: 480px;
     z-index: 10;
 }
 
 .lh-td-container {
-    background-color: rgb(51, 122, 183);
-    height: 335px;
+    background-color: black;
+    height: 68vh;
     left: 0;
     position: absolute;
     text-align: center;
     top: 0;
     width: 40px;
+    min-height: 320px;
     z-index: 11;
 }
 
@@ -311,7 +313,7 @@ app {
 
 .lh-th-topline {
     color: white;
-    font-size: 12px;
+    font-size: 14px;
     height: 20px;
     padding: 0 0 0 1px;
     padding-left: 1px;
@@ -325,13 +327,13 @@ app {
 
 .lh-th-bottomline {
     color: white;
-    font-size: 12px;
+    font-size: 14px;
     height: 20px;
     padding: 0 0 0 1px;
     padding-left: 1px;
     position: absolute;
     text-align: left;
-    top: .0em;
+    top: 21px;
     vertical-align: bottom;
     z-index: 10;
 }
@@ -345,19 +347,19 @@ app {
 }
 
 .lh-td {
-    color: blue;
+    color: black;
     font-size: 12px;
     font-weight: bold;
     text-align: left;
     z-index: 1;
 }
 
-.verticaltext {
+/*.verticaltext {
     background-color: rgb(51, 122, 183);
     font-size: 12px;
     text-align: center;
     width: 20px;
-}
+}*/
 
 .lh-td-rowspan {
     background-color: #337ab7;
@@ -368,9 +370,9 @@ app {
 }
 
 .lh-td-first {
-    background-color: #337ab7;
-    background-color: rgba(51, 122, 183, 0.36);
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
+    font-size: 12px;
     width: 20px;
 }
 
@@ -415,7 +417,7 @@ app {
 
 .maxdepthtitle {
     color: #ff0000;
-    color: rgba(255, 0, 0, 0.60);
+    /*color: rgba(255, 0, 0, 0.60);*/
 }
 /*#endregion*/
 
@@ -573,4 +575,17 @@ input[type=number]::-webkit-outer-spin-button {
     height: 100px;
     margin-bottom: 250px;
     width: 100%;
+}
+
+.verticaltext {
+    text-align: center;
+    width: 20px;
+    background-color: black;
+    font-size: 14px;
+    color: white;
+    width: 1em;
+    word-break: break-word;
+    letter-spacing: 2em;
+    white-space: pre-wrap;
+    margin-left: 15px;
 }
